# TouchToolPro

./: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/top/bogey/touch_tool_pro/: IUserService.aidl
app/src/main/assets/: default
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  ocr_clipper.hpp  ocr_crnn_process.cpp  ocr_crnn_process.h  ocr_db_post_process.cpp  ocr_db_post_process.h  ocr_ppredictor.cpp  ppredictor.cpp  predictor_input.cpp  predictor_output.cpp
app/src/main/cpp/opencv2/: cvconfig.h
app/src/main/java/top/bogey/touch_tool/: ActionExportedService.java  DoOutActionActivity.java  MainAccessibilityService.java  MainActivity.java  MainApplication.java  MainCaptureService.java  PackageInfoTileService.java  PlayFloatViewTileService.java
app/src/main/res/color/: fill_button_background_error_check.xml
app/src/main/res/drawable-anydpi/: icon_accessibility.xml  icon_background_pop.xml  icon_behavior_condition.xml  icon_behavior_loop.xml  icon_behavior_parallel.xml  icon_charging.xml  icon_drag_bottom.xml  icon_drag_left.xml  icon_drag_right.xml  icon_drag_top.xml  icon_export.xml  icon_get_value.xml  icon_home.xml  icon_key.xml  icon_launcher.xml  icon_launcher_mono.xml  icon_layouts.xml  icon_menu_setting.xml  icon_menu_sort.xml  icon_move.xml  icon_paste.xml  icon_play.xml  icon_record.xml  icon_record_smart.xml  icon_save.xml  icon_setting.xml  icon_setting_dark_mode.xml  icon_setting_debug.xml  icon_setting_delay.xml  icon_setting_oversee.xml  icon_setting_running.xml  icon_shizuku.xml  icon_shizuku_all.xml  icon_shortcut.xml  icon_task_app_changed.xml  icon_task_close.xml  icon_task_content_changed.xml  icon_task_it_is_time.xml  icon_task_manual.xml  icon_task_view_changed.xml  (+4 more)
app/src/main/res/layout/: activity_blueprint.xml  activity_home.xml  activity_home_task_item.xml  activity_home_task_tab.xml  activity_home_task_tab_item.xml  activity_main.xml  card_base.xml  card_custom.xml  card_delay.xml  card_manual_start.xml  dialog_create_function_context.xml  dialog_handle_action_context.xml  dialog_handle_action_context_item.xml  dialog_select_action.xml  dialog_select_activity.xml  dialog_text_input.xml  dialog_thank.xml  float_keep_alive.xml  float_log.xml  float_log_item.xml  float_manual_choice_execute.xml  float_manual_choice_execute_item.xml  float_package_info_view.xml  float_package_info_view_item.xml  float_picker_area.xml  float_picker_area_preview.xml  float_picker_change_area.xml  float_picker_color.xml  float_picker_image.xml  float_picker_image_preview.xml  float_picker_node.xml  float_picker_node_preview.xml  float_picker_package_preview.xml  float_picker_pos.xml  float_picker_pos_preview.xml  float_picker_text_preview.xml  float_picker_touch.xml  float_picker_touch_preview.xml  float_picker_widget.xml  float_picker_widget_item.xml  (+80 more)
app/src/main/res/menu/: menu_function.xml  menu_home.xml  menu_main.xml  menu_task.xml  menu_task_detail.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: navigation_main.xml
app/src/main/res/values/: attr.xml  colors.xml  string_array.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+664 files in other folders)
